# inkling

./: .eslintrc.cjs  .gitignore  LICENSE  PRIVACY.md  README.md  TERMS.md  eslint.config.js  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  models.rs
src-tauri/src/ai/: agent.rs  attachment_parser.rs  chat_executor.rs  config.rs  context.rs  deep_research_agent.rs  embed_queue.rs  embeddings.rs  export_agent.rs  inline_assistant.rs  mod.rs  rag.rs  research_agent.rs  streaming_agent.rs  summarization_agent.rs  tagging_agent.rs  url_indexing_agent.rs  url_scraper.rs
src-tauri/src/ai/llm/: anthropic.rs  google.rs  mod.rs  openai.rs  types.rs
src-tauri/src/ai/tools/: append_to_note.rs  calendar.rs  create_note.rs  daily_notes.rs  document_builder.rs  export_notes.rs  fetch_url.rs  folders.rs  mod.rs  note_links.rs  note_tags.rs  read_attachment.rs  read_document.rs  read_note.rs  read_url.rs  (+5 more)
src-tauri/src/commands/: agents.rs  ai.rs  assistant.rs  boards.rs  calendar.rs  chat.rs  daily_notes.rs  exports.rs  folders.rs  google.rs  graph.rs  links.rs  mod.rs  notes.rs  search.rs  tags.rs  urls.rs  vault.rs
src-tauri/src/db/: boards.rs  calendar_events.rs  connection.rs  conversations.rs  embeddings.rs  exports.rs  folders.rs  links.rs  migrations.rs  mod.rs  notes.rs  settings.rs  tags.rs  url_attachments.rs
src-tauri/src/exports/: document_builder.rs  docx_generator.rs  html_to_markdown.rs  markdown_parser.rs  mod.rs  pdf_generator.rs  pptx_generator.rs  xlsx_generator.rs
src-tauri/src/google/: calendar.rs  config.rs  mod.rs  oauth.rs
src-tauri/src/search/: index.rs  mod.rs  schema.rs
src-tauri/src/sidecar/: mod.rs
src-tauri/src/vault/: board_sync.rs  config.rs  markdown.rs  mod.rs  sync.rs  watcher.rs
(+152 files in other folders)
